fastdebug build broken after JDK-8221393 (phase_mapping[] doesn't match enum Phase in WeakProcessorPhases)

XMLWordPrintable

    • gc
    • b17

      It seems that phase_mapping[] doesn't match enum Phase in WeakProcessorPhases anymore.

      $ make hotspot CONF=linux-x86_64-server-fastdebug
      Building target 'hotspot' in configuration 'linux-x86_64-server-fastdebug'
      Updating support/modules_libs/java.base/server/libjvm.so due to 10 file(s)
      In file included from /home/aoqi/jdk/src/hotspot/share/utilities/globalDefinitions.hpp:29:0,
                       from /home/aoqi/jdk/src/hotspot/share/utilities/align.hpp:28,
                       from /home/aoqi/jdk/src/hotspot/share/runtime/globals.hpp:29,
                       from /home/aoqi/jdk/src/hotspot/share/memory/allocation.hpp:28,
                       from /home/aoqi/jdk/src/hotspot/share/classfile/classLoaderData.hpp:28,
                       from /home/aoqi/jdk/src/hotspot/share/precompiled/precompiled.hpp:34:
      /home/aoqi/jdk/src/hotspot/share/utilities/debug.hpp:189:5: error: incomplete type 'STATIC_ASSERT_FAILURE<false>' used in nested name specifier
           STATIC_ASSERT_FAILURE< (Cond) >::value ]
           ^
      /home/aoqi/jdk/src/hotspot/share/gc/shenandoah/shenandoahRootProcessor.cpp:61:1: note: in expansion of macro 'STATIC_ASSERT'
       STATIC_ASSERT(sizeof(phase_mapping) / sizeof(PhaseMap) == WeakProcessorPhases::phase_count);
       ^
      cc1plus: warning: unrecognized command line option "-Wno-misleading-indentation" [enabled by default]
      cc1plus: warning: unrecognized command line option "-Wno-implicit-fallthrough" [enabled by default]
      cc1plus: warning: unrecognized command line option "-Wno-int-in-bool-context" [enabled by default]
      gmake[3]: *** [/home/aoqi/jdk/build/linux-x86_64-server-fastdebug/hotspot/variant-server/libjvm/objs/shenandoahRootProcessor.o] Error 1
      gmake[3]: *** Waiting for unfinished jobs....
      gmake[2]: *** [hotspot-server-libs] Error 1

      ERROR: Build failed for target 'hotspot' in configuration 'linux-x86_64-server-fastdebug' (exit code 2)

      === Output from failing command(s) repeated here ===
      * For target hotspot_variant-server_libjvm_objs_shenandoahRootProcessor.o:
      In file included from /home/aoqi/jdk/src/hotspot/share/utilities/globalDefinitions.hpp:29:0,
                       from /home/aoqi/jdk/src/hotspot/share/utilities/align.hpp:28,
                       from /home/aoqi/jdk/src/hotspot/share/runtime/globals.hpp:29,
                       from /home/aoqi/jdk/src/hotspot/share/memory/allocation.hpp:28,
                       from /home/aoqi/jdk/src/hotspot/share/classfile/classLoaderData.hpp:28,
                       from /home/aoqi/jdk/src/hotspot/share/precompiled/precompiled.hpp:34:
      /home/aoqi/jdk/src/hotspot/share/utilities/debug.hpp:189:5: error: incomplete type 'STATIC_ASSERT_FAILURE<false>' used in nested name specifier
           STATIC_ASSERT_FAILURE< (Cond) >::value ]
           ^
      /home/aoqi/jdk/src/hotspot/share/gc/shenandoah/shenandoahRootProcessor.cpp:61:1: note: in expansion of macro 'STATIC_ASSERT'
       STATIC_ASSERT(sizeof(phase_mapping) / sizeof(PhaseMap) == WeakProcessorPhases::phase_count);
       ^
         ... (rest of output omitted)

      * All command lines available in /home/aoqi/jdk/build/linux-x86_64-server-fastdebug/make-support/failure-logs.
      === End of repeated output ===

      No indication of failed target found.
      Hint: Try searching the build log for '] Error'.
      Hint: See doc/building.html#troubleshooting for assistance.

      make[1]: *** [main] Error 1
      make: *** [hotspot] Error 2

            Assignee:
            Qi Ao
            Reporter:
            Qi Ao
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: